public/stylesheets/style.css
@import url("whitespace-reset.css");
@import url("https://fonts.googleapis.com/css?family=Roboto");
@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");

/* ---------------------------------

                general

------------------------------------ */
:root {
  --dark-blue: #3282b8;
  --grey: #ecf0f1;
  --white: #ffffff;
  --dark-grey: #a9a9a9;
  --orange: #e67300;
}

body {
  -webkit-animation: fadeIn 2s;
  -moz-animation: fadeIn 2s;
  -o-animation: fadeIn 2s;
  animation: fadeIn 2s;
}

@-webkit-keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@-moz-keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

html {
  font-size: 18px;
  font-family: "Roboto", sans-serif;
}

h1 {
  color: var(--dark-blue);
  font-size: 3rem;
  text-align: center;
}

h2 {
  font-size: 2.2rem;
  font-weight: 900;
  text-align: center;
}

h4 {
  align-items: center;
  color: var(--dark-blue);
  display: flex;
  font-size: 1.2rem;
  font-weight: 700;
  height: 35px;
  justify-content: center;
  margin: 20px 0;
  text-align: center;
}

h5 {
  color: #fff;
  font-size: 0.8rem;
  font-weight: 400;
}

p {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.7rem;
  margin-bottom: 15px;
  font-family: "Open Sans", sans-serif;
}

a {
  color: var(--dark-blue);
  text-decoration: none;
}

li {
  margin: 0 2%;
}

.padded {
  padding: 100px;
}

hr {
  border: 0;
  border-top: 1px solid #ecf0f1;
  width: 15%;
}

footer {
  background-color: var(--grey);
  padding: 25px 0;
}

.flexbox {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
}

.btn {
  background-color: var(--dark-blue);
  border: solid 1px var(--dark-blue);
  border-radius: 5px;
  color: #fff;
  font-weight: 700;
  padding: 10px;
  text-align: center;
}

.icon {
  background-color: var(--dark-blue);
  border: solid 1px var(--dark-blue);
  border-radius: 25px;
  margin: 2%;
  min-width: 34px;
  padding: 3px;
  width: 20%;
}

.btn:hover,
.icon:hover {
  background-color: var(--orange);
  border-color: var(--orange);
}

a:hover {
  color: var(--orange);
}

.horz-center {
  -ms-align-items: center;
  align-items: center;
  flex-direction: column;
}

.vert-center {
  -ms-align-items: center;
  align-items: center;
  flex-direction: row;
  justify-content: center;
}

#logo {
  margin: 25px;
  opacity: 0.5;
  position: fixed;
  width: 60px;
}

/* ---------------------------------

             intro 

------------------------------------ */

#avatar {
  display: block;
  max-width: 250px;
  min-width: 200px;
  object-fit: contain;
  border-radius: 100%;
}

#intro p {
  text-align: center;
  max-width: 550px;
  font-size: 1rem;
  font-weight: 400;
  line-height: 36px;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.profile-name {
  font-size: 2rem;
  margin: 2rem 0;
  font-weight: 900;
}

/* ---------------------------------

                venice

------------------------------------ */

#venice {
  background: linear-gradient(
      rgba(255, 255, 255, 0.7),
      rgba(255, 255, 255, 0.7)
    ),
    url("https://source.unsplash.com/nN1HSDtKdlw");
  background-size: cover;
}

#venice-title-container {
  -ms-align-items: center;
  align-items: center;
  justify-content: center;
}

#venice-logo {
  display: inline-block;
  margin-right: 15px;
  width: 50px;
}

#venice h2 {
  display: inline-block;
}

#venice-info-container {
  margin-top: 75px;
}

#venice-info-container > div {
  width: 50%;
}

#venice-info-container > div:first-of-type {
  margin-right: 2.5%;
}

#hero-project-image {
  background-color: #282828;
  border: solid 10px #282828;
  border-radius: 10px;
  max-width: 100%;
}

#venice-info-container > div:last-of-type {
  margin-left: 2.5%;
}

#venice p:first-of-type {
  position: relative;
  top: -0.5rem;
}

#venice-repo-btn {
  margin-top: 25px;
  width: 228px;
}

#venice-repo-btn:hover {
  background-color: var(--orange);
  color: var(--white);
}
/* ---------------------------------

                projects 

------------------------------------ */

#projects ul {
  text-align: center;
  justify-items: center;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  column-gap: 1.5rem;
  grid-auto-flow: row;
}

#projects > ul {
  margin-top: 75px;
}

#projects ul li {
  justify-items: center;
  display: grid;
  grid-template-rows: 150px 1fr 3fr;
}

#projects img {
  height: 100%;
  background-size: cover;
  background-position: cover;
}

#projects h4 {
  align-self: center;
}

#projects p {
  font-size: 0.9rem;
}

#projects > h2 {
  color: var(--dark-blue);
}

/* ---------------------------------

             footer 

------------------------------------ */

footer {
  padding-top: 50px;
  padding-bottom: 50px;
}

footer ul {
  width: 20%;
}

footer li {
  margin: 6%;
}

/* ---------------------------------

              contact

------------------------------------ */

#resume-logo {
  cursor: pointer;
  width: 35px;
  position: fixed;
  top: 5px;
  left: 5px;
}

#github-logo {
  cursor: pointer;
  width: 35px;
  position: fixed;
  top: 55px;
  left: 5px;
}

#linkedin-logo {
  cursor: pointer;
  width: 35px;
  position: fixed;
  top: 105px;
  left: 5px;
}

#contact {
  padding-top: 50px;
  background: #f7f7f7;
}

#contact h3 {
  margin-bottom: 10px;
}

#contact ul {
  width: 20%;
}

#contact li {
  margin: 6%;
}

/* ---------------------------------
           media queries
------------------------------------ */
@media (max-width: 1100px) {
  #venice-info-container {
    -ms-align-items: center;
    align-items: center;
    text-align: center;
    flex-direction: column;
    margin-top: 50px;
  }

  #venice-info-container > div:first-of-type {
    margin-right: 0;
  }

  #venice-info-container > div:last-of-type {
    margin-left: 0;
  }

  #venice-info-container > div {
    width: 90%;
  }

  #hero-project-image {
    margin-bottom: 50px;
  }

  #contact ul {
    width: 30%;
  }

  #contact li {
    margin: 8%;
  }
}

@media (max-width: 690px) {
  #venice-logo {
    margin-bottom: 25px;
    width: 75px;
  }

  #venice-title-container {
    -ms-align-items: center;
    align-items: center;
    flex-direction: column;
  }

  #venice-logo {
    margin-right: 0;
  }
}

@media (max-width: 570px) {
  #venice-info-container {
    margin-top: 25px;
  }

  #venice-repo-btn {
    align-self: center;
  }
}

@media (max-width: 465px) {
  #venice-info-container > div {
    width: 100%;
  }

  #venice-logo {
    width: 60px;
  }

  #contact li {
    margin: 15%;
  }

  #projects > ul {
    width: 100%;
  }
}

@media (max-width: 400px) {
  html {
    font-size: 16px;
  }

  #venice-repo-btn {
    width: 180px;
  }

  #projects > ul {
    margin-top: 50px;
  }

  #projects li {
    margin-bottom: 50px;
  }

  #projects li:last-of-type {
    margin-bottom: 0;
  }
}

